{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 148,
  "lineage": "5254b98c-a42a-dd60-9c5f-193582cf9598",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "backend-lb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb/frontendIPConfigurations/backend-lb",
                "load_balancer_rules": [
                  "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb/loadBalancingRules/backend-lb"
                ],
                "name": "backend-lb",
                "private_ip_address": "172.16.2.4",
                "private_ip_address_allocation": "Static",
                "subnet_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet/subnets/Backend"
              }
            ],
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb",
            "location": "eastus",
            "name": "backend-lb",
            "private_ip_address": "172.16.2.4",
            "private_ip_addresses": [
              "172.16.2.4"
            ],
            "resource_group_name": "checkpoint-vmss-terraform",
            "sku": "Standard"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "frontend-lb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb/frontendIPConfigurations/checkpoint-vmss-terraform-app-1",
                "load_balancer_rules": [
                  "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb/loadBalancingRules/checkpoint-vmss-terraform-app-1"
                ],
                "name": "checkpoint-vmss-terraform-app-1",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/publicIPAddresses/checkpoint-vmss-terraform-app-1"
              }
            ],
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb",
            "location": "eastus",
            "name": "frontend-lb",
            "resource_group_name": "checkpoint-vmss-terraform",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_public_ip.public-ip-lb",
            "module.common.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend-lb-pool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Compute/virtualMachineScaleSets/checkpoint-vmss-terraform/virtualMachines/0/networkInterfaces/eth1/ipConfigurations/ipconfig2",
              "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Compute/virtualMachineScaleSets/checkpoint-vmss-terraform/virtualMachines/1/networkInterfaces/eth1/ipConfigurations/ipconfig2"
            ],
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb/backendAddressPools/backend-lb-pool",
            "load_balancing_rules": [
              "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb/loadBalancingRules/backend-lb"
            ],
            "loadbalancer_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb",
            "name": "backend-lb-pool",
            "resource_group_name": "checkpoint-vmss-terraform"
          },
          "dependencies": [
            "azurerm_lb.backend-lb",
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "frontend-lb-pool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Compute/virtualMachineScaleSets/checkpoint-vmss-terraform/virtualMachines/0/networkInterfaces/eth0/ipConfigurations/ipconfig1",
              "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Compute/virtualMachineScaleSets/checkpoint-vmss-terraform/virtualMachines/1/networkInterfaces/eth0/ipConfigurations/ipconfig1"
            ],
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb/backendAddressPools/checkpoint-vmss-terraform-app-1",
            "load_balancing_rules": [
              "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb/loadBalancingRules/checkpoint-vmss-terraform-app-1"
            ],
            "loadbalancer_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/frontend-lb",
            "name": "checkpoint-vmss-terraform-app-1",
            "resource_group_name": "checkpoint-vmss-terraform"
          },
          "dependencies": [
            "azurerm_lb.frontend-lb",
            "azurerm_public_ip.public-ip-lb",
            "module.common.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "azure_lb_healprob",
      "each": "list",
      "provider": "provider.azurerm"
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbnatrule",
      "each": "list",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.network-security-group",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/networkSecurityGroups/checkpoint-vmss-terraform_nsg",
            "location": "eastus",
            "name": "checkpoint-vmss-terraform_nsg",
            "resource_group_name": "checkpoint-vmss-terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow all inbound connections",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "0-65535"
                ],
                "direction": "Inbound",
                "name": "AllowAllInBound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "",
                "source_port_ranges": [
                  "0-65535"
                ]
              }
            ],
            "tags": {}
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.network-security-group",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "security_rule",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public-ip-lb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "checkpoint-vmss-terraform-frontend-lb",
            "fqdn": "checkpoint-vmss-terraform-frontend-lb.eastus.cloudapp.azure.com",
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/publicIPAddresses/checkpoint-vmss-terraform-app-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.146.54.165",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "checkpoint-vmss-terraform-app-1",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "checkpoint-vmss-terraform",
            "sku": "Standard"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.16.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet/subnets/Frontend",
            "ip_configurations": [
              "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Compute/virtualMachineScaleSets/checkpoint-vmss-terraform/virtualMachines/0/networkInterfaces/eth0/ipConfigurations/ipconfig1",
              "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Compute/virtualMachineScaleSets/checkpoint-vmss-terraform/virtualMachines/1/networkInterfaces/eth0/ipConfigurations/ipconfig1"
            ],
            "name": "Frontend",
            "resource_group_name": "checkpoint-vmss-terraform",
            "route_table_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/routeTables/Frontend",
            "virtual_network_name": "checkpoint-vmss-vnet"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.16.2.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet/subnets/Backend",
            "ip_configurations": [
              "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Compute/virtualMachineScaleSets/checkpoint-vmss-terraform/virtualMachines/0/networkInterfaces/eth1/ipConfigurations/ipconfig2",
              "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Compute/virtualMachineScaleSets/checkpoint-vmss-terraform/virtualMachines/1/networkInterfaces/eth1/ipConfigurations/ipconfig2",
              "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/loadBalancers/backend-lb/frontendIPConfigurations/backend-lb"
            ],
            "name": "Backend",
            "resource_group_name": "checkpoint-vmss-terraform",
            "route_table_id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/routeTables/Backend",
            "virtual_network_name": "checkpoint-vmss-vnet"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16"
            ],
            "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet",
            "location": "eastus",
            "name": "checkpoint-vmss-vnet",
            "resource_group_name": "checkpoint-vmss-terraform",
            "subnet": [
              {
                "address_prefix": "172.16.1.0/24",
                "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet/subnets/Frontend",
                "name": "Frontend"
              },
              {
                "address_prefix": "172.16.2.0/24",
                "id": "/subscriptions/82c0718c-e8d4-4270-ac87-4ffbab62df88/resourceGroups/checkpoint-vmss-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-vmss-vnet/subnets/Backend",
                "name": "Backend"
              }
            ]
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group"
          ]
        }
      ]
    }
  ]
}